# mengxun-sign

./: .gitignore  CLAUDE.md  README.md  mengxun-sign-v2.2.0.apk.idsig  mengxun-sign-v2.3.0.apk.idsig  mengxun-sign.apk.idsig
client/: CMakeLists.txt  XXTSign.pro  main.cpp  main_minimal.cpp  mainwindow.cpp  mainwindow.h  minimal_test.pro
client/android/: AndroidManifest.xml
client/android/res/drawable/: ic_launcher_foreground.xml
client/android/res/values/: colors.xml  styles.xml
client/android/src/com/mengxun/sign/: ApkUpdateHelper.java  ShareForegroundService.java  ShareHelper.java  ShareReceiver.java
client/build-android-qmake/: android-XXTSign-deployment-settings.json  moc_predefs.h
client/build-android-qmake/android-build/: gradle.properties  local.properties
client/build-android-qmake/android-build/res/drawable/: ic_launcher_background.xml
client/build-android-qmake/android-build/res/values/: libs.xml  styles.xml
client/build-android-qmake/android-build/res/xml/: network_security_config.xml
client/build-android-qmake/android-build/src/com/mengxun/sign/: ShareHelper.java
client/build-minimal/: .qmake.stash  android-XXTMinimal-deployment-settings.json
client/build-minimal/android-build/: build_apk.bat  gradle.properties
client/build-minimal/android-build/res/drawable/: icon.xml
client/crypto/: cryptohelper.cpp  cryptohelper.h
client/network/: apiclient.cpp  apiclient.h  chaoxingclient.cpp  chaoxingclient.h
client/ui/: accounttab.cpp  accounttab.h  historytab.cpp  historytab.h  qrscanframe.h  signintab.cpp  signintab.h
server/: .env.example  chaoxing_api.py  config.py  database.py  debug_courses.html  debug_tasks.html  deploy.sh  encryption.py  main.py  models.py  requirements.txt  update.json  xx-sign.service
